--- a/public/IT/css/style.css
+++ b/public/IT/css/style.css
@@ -1673,3 +1673,15 @@ h1, h2, h3, h4 {
   color:white; 
   font-size:140%;
 }
+
+/*** Categories & Courses ***/
+.category img,
+.course-item img {
+    transition: .5s;
+}
+
+.category a:hover img,
+.course-item:hover img {
+    transform: scale(1.1);
+}
+
